@@ -4,9 +4,10 @@ import com.linkerbell.portradebackend.domain.portfolio.domain.Portfolio;
 import com.linkerbell.portradebackend.domain.portfolio.dto.CreatePortfolioRequestDto;
 import com.linkerbell.portradebackend.domain.portfolio.dto.PortfolioDetailResponseDto;
 import com.linkerbell.portradebackend.domain.portfolio.repository.PortfolioRepository;
-import com.linkerbell.portradebackend.domain.user.domain.Role;
 import com.linkerbell.portradebackend.domain.user.domain.User;
+import com.linkerbell.portradebackend.global.common.File;
 import com.linkerbell.portradebackend.global.exception.custom.NonExistentException;
+import com.linkerbell.portradebackend.global.util.S3Util;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -15,8 +16,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -33,22 +37,14 @@ class PortfolioServiceTest {
     private PortfolioService portfolioService;
     @Mock
     private PortfolioRepository portfolioRepository;
+    @Mock
+    private S3Util s3Util;
 
-    private User admin;
     private User user;
     private Portfolio portfolio;
 
     @BeforeEach
     public void setUp() {
-        admin = User.builder()
-                .username("admin1")
-                .password("1234Aa@@")
-                .name("관리자1")
-                .birthDate("20030327")
-                .wantedJob("marketing")
-                .build();
-        admin.addRole(Role.ROLE_ADMIN);
-
         user = User.builder()
                 .username("user1")
                 .password("1234Aa@@")
@@ -75,13 +71,35 @@ class PortfolioServiceTest {
     @Test
     void createPortfolio() throws Exception {
         // given
+        MockMultipartFile mockMainImageFile = new MockMultipartFile(
+                "mainImage",
+                "mainImage",
+                "image/png",
+                "mainImage".getBytes());
+        MockMultipartFile mockContentFile = new MockMultipartFile(
+                "contentFiles",
+                "contentFile",
+                "image/png",
+                "contentFiles".getBytes());
         CreatePortfolioRequestDto createPortfolioRequestDto = CreatePortfolioRequestDto.builder()
                 .title("포트폴리오 제목")
                 .description("포트폴리오 설명")
                 .category("marketing")
                 .isPublic(false)
-                .contentFiles(Collections.emptyList())
+                .mainImageFile(mockMainImageFile)
+                .contentFiles(List.of(mockContentFile))
                 .build();
+        File mainFile = File.builder()
+                .fileName("mainImageFile")
+                .extension("png")
+                .url("main_url").build();
+        File contentFile = File.builder()
+                .fileName("contentFile")
+                .extension("png")
+                .url("content_url").build();
+        given(s3Util.upload(any(MultipartFile.class)))
+                .willReturn(mainFile)
+                .willReturn(contentFile);
 
         // when
         portfolioService.createPortfolio(createPortfolioRequestDto, user);
